--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
             <div class="hero-grid container">
                 <div class="hero-content">
                     <h2 class="text-heading-1">Hello! I'm Tracy.</h2>
-                    <p class="text-body-lg">I’m a product designer and an explorer at heart—curious, experimental, and always asking “what if?” I design digital experiences that feel smart, clean, and familiar, balancing big-picture product strategy with the smallest design details. My process is research-driven and iterative, elevated by thoughtful use of AI at every step—from discovery to design to refinement—shaped by over a decade of creating products that put people first. Based in Denver, CO.</p>
+                    <p class="text-body-lg">I’m a product designer and an explorer at heart—curious, experimental, and always asking “what if?” I design digital experiences that feel smart, clean, and familiar, balancing big-picture product strategy with the smallest design details. My process is research-driven and iterative, elevated by thoughtful use of AI* at every step—from discovery to design to refinement—shaped by over a decade of creating products that put people first. Based in Denver, CO.</p>
+                    <p class="text-body-base">*I built this site using Cursor. I'm always making it better!</p>
                     <div class="social-links" role="navigation" aria-label="Social links">
                         <a class="social-btn social-btn--outlined" href="https://www.linkedin.com/in/tlainy" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
                             <img src="assets/Linkedin_circular.svg" alt="" aria-hidden="true" />
@@ -119,7 +120,7 @@
 
         <section id="about" class="about">
             <div class="container">
-                <h2 class="text-heading-2">Curious about my process?</h2>
+                <h3 class="text-heading-2">Curious about my process?</h3>
                 <p class="text-body-lg">AI is now baked into my foundational process as a creative sidekick. <br> It's not a shortcut — it's a way to work smarter and stay curious.</p>
                 <p><a href="ai-design.html" class="nav-link">Learn more</a></p>
             </div>
